--- a/content/resources/12-742f06.md
+++ b/content/resources/12-742f06.md
@@ -2,13 +2,15 @@
 content_type: resource
 description: Heated, mineral rich water spews from a hydrothermal vent on the ocean
   floor. (Image courtesy of NOAA PMEL Vents Program.)
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/12-742-marine-chemistry-fall-2006/5f634d8d4c8a063d2bba06a806009175_12-742f06.gif
+file: /media/courses/12-742-marine-chemistry-fall-2006/5f634d8d4c8a063d2bba06a806009175_12-742f06.gif
 file_type: image/gif
 image_metadata:
   caption: Heated, mineral rich water spews from a hydrothermal vent on the ocean
     floor. (Image courtesy of [NOAA PMEL Vents Program](http://www.pmel.noaa.gov/vents/).)
   credit: ''
   image-alt: Animation of heated water spewing from a hydrothermal vent.
+learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: 12-742f06.gif
 uid: 5f634d8d-4c8a-063d-2bba-06a806009175
