Sync all content

--- a/content/resources/12-742f06.md
+++ b/content/resources/12-742f06.md
@@ -10,10 +10,10 @@ image_metadata:
   credit: ''
   image-alt: Animation of heated water spewing from a hydrothermal vent.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 12-742f06.gif
 uid: 5f634d8d-4c8a-063d-2bba-06a806009175
 ---
 Heated, mineral rich water spews from a hydrothermal vent on the ocean floor. (Image courtesy of NOAA PMEL Vents Program.)
-
