--- a/content/resources/12-742f06-th.md
+++ b/content/resources/12-742f06-th.md
@@ -9,6 +9,7 @@ image_metadata:
   credit: ''
   image-alt: Animation of heated water spewing from a hydrothermal vent.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 12-742f06-th.jpg
