Sync all content

--- a/content/resources/12-742f06.md
+++ b/content/resources/12-742f06.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Heated, mineral rich water spews from a hydrothermal vent on the ocean
   floor. (Image courtesy of NOAA PMEL Vents Program.)
 file: /courses/12-742-marine-chemistry-fall-2006/5f634d8d4c8a063d2bba06a806009175_12-742f06.gif
+file_size: 690618
 file_type: image/gif
 image_metadata:
   caption: Heated, mineral rich water spews from a hydrothermal vent on the ocean
