--- a/content/resources/12-742f06-th.md
+++ b/content/resources/12-742f06-th.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/12-742-marine-chemistry-fall-2006/d8cf756d2ccbc97b75c3b9e870540f4e_12-742f06-th.jpg
+file_size: 19669
 file_type: image/jpeg
 image_metadata:
   caption: Heated, mineral rich water spews from a hydrothermal vent on the ocean
