Sync all content

--- a/content/resources/12-742f06.md
+++ b/content/resources/12-742f06.md
@@ -7,7 +7,8 @@ file_size: 690618
 file_type: image/gif
 image_metadata:
   caption: Heated, mineral rich water spews from a hydrothermal vent on the ocean
-    floor. (Image courtesy of [NOAA PMEL Vents Program](http://www.pmel.noaa.gov/vents/).)
+    floor. (Image courtesy of {{% resource_link "943e34fe-8c19-4728-aae9-a7205a6b593e"
+    "NOAA PMEL Vents Program" %}}.)
   credit: ''
   image-alt: Animation of heated water spewing from a hydrothermal vent.
 learning_resource_types: []
